--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "match-sorter": "^8.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
     "react-simple-captcha": "^9.3.1",
