--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@material-tailwind/react": "^2.1.10",
+    "@smastrom/react-rating": "^1.5.0",
     "@tanstack/react-query": "^5.64.1",
     "axios": "^1.7.9",
     "date-fns": "^4.1.0",
