--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@material-tailwind/react": "^2.1.10",
     "@smastrom/react-rating": "^1.5.0",
+    "@stripe/react-stripe-js": "^3.1.1",
+    "@stripe/stripe-js": "^5.5.0",
     "@tanstack/react-query": "^5.64.1",
     "axios": "^1.7.9",
     "date-fns": "^4.1.0",
