--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@stripe/react-stripe-js": "^3.1.1",
     "@stripe/stripe-js": "^5.5.0",
     "@tanstack/react-query": "^5.64.1",
+    "aos": "^2.3.4",
     "axios": "^1.7.9",
     "date-fns": "^4.1.0",
     "firebase": "^11.1.0",
@@ -33,7 +34,7 @@
     "react-simple-captcha": "^9.3.1",
     "react-toastify": "^11.0.2",
     "sort-by": "^0.0.2",
-    "sweetalert2": "^11.15.10"
+    "sweetalert2": "^11.6.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
