--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "match-sorter": "^8.0.0",
     "motion": "^12.0.1",
     "react": "^18.3.1",
+    "react-countup": "^6.5.3",
     "react-datepicker": "^7.6.0",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
