--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-countup": "^6.5.3",
     "react-datepicker": "^7.6.0",
     "react-dom": "^18.3.1",
+    "react-fast-marquee": "^1.6.5",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.54.2",
